RDFCompiler/obj/Debug/netcoreapp3.1/GrammParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from F:\temp\RDFCompiler\RDFCompiler\Gramm.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace RDFCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class GrammParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		BOOL_OPERATOR=25, INTEGER=26, DOUBLE=27, STRING=28, BOOL=29, NULL=30, 
		NEW=31, TYPE=32, WS=33, IDENTIFIER=34;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_ifBlock = 3, 
		RULE_elseIfBlock = 4, RULE_whileBlock = 5, RULE_assingment = 6, RULE_propMember = 7, 
		RULE_class_constructor = 8, RULE_typeDeclaration = 9, RULE_enumeration = 10, 
		RULE_functionCall = 11, RULE_newClass = 12, RULE_expression = 13, RULE_multOp = 14, 
		RULE_addOp = 15, RULE_compareOp = 16, RULE_boolOp = 17, RULE_constant = 18, 
		RULE_block = 19;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "ifBlock", "elseIfBlock", "whileBlock", 
		"assingment", "propMember", "class_constructor", "typeDeclaration", "enumeration", 
		"functionCall", "newClass", "expression", "multOp", "addOp", "compareOp", 
		"boolOp", "constant", "block"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'if'", "'('", "')'", "'else'", "'while'", "'='", "'.'", 
		"','", "'typeof'", "'|'", "'!'", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", 
		"'>'", "'<'", "'>='", "'<='", "'{'", "'}'", null, null, null, null, null, 
		"'null'", "'new'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "BOOL_OPERATOR", "INTEGER", "DOUBLE", "STRING", "BOOL", "NULL", 
		"NEW", "TYPE", "WS", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gramm.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GrammParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GrammParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__5) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 40; line();
				}
				}
				State = 45;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 46; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		public WhileBlockContext whileBlock() {
			return GetRuleContext<WhileBlockContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 51;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48; statement();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49; ifBlock();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50; whileBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public AssingmentContext assingment() {
			return GetRuleContext<AssingmentContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 53; assingment();
				}
				break;

			case 2:
				{
				State = 54; functionCall();
				}
				break;
			}
			State = 57; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfBlockContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseIfBlockContext elseIfBlock() {
			return GetRuleContext<ElseIfBlockContext>(0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterIfBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitIfBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfBlockContext ifBlock() {
		IfBlockContext _localctx = new IfBlockContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_ifBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(T__1);
			State = 60; Match(T__2);
			State = 61; expression(0);
			State = 62; Match(T__3);
			State = 63; block();
			State = 66;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__4) {
				{
				State = 64; Match(T__4);
				State = 65; elseIfBlock();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseIfBlockContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		public ElseIfBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseIfBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterElseIfBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitElseIfBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseIfBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseIfBlockContext elseIfBlock() {
		ElseIfBlockContext _localctx = new ElseIfBlockContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_elseIfBlock);
		try {
			State = 70;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__22:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68; block();
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 69; ifBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileBlockContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public WhileBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterWhileBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitWhileBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileBlockContext whileBlock() {
		WhileBlockContext _localctx = new WhileBlockContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_whileBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(T__5);
			State = 73; Match(T__2);
			State = 74; expression(0);
			State = 75; Match(T__3);
			State = 76; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssingmentContext : ParserRuleContext {
		public ITerminalNode[] IDENTIFIER() { return GetTokens(GrammParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GrammParser.IDENTIFIER, i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NewClassContext newClass() {
			return GetRuleContext<NewClassContext>(0);
		}
		public PropMemberContext propMember() {
			return GetRuleContext<PropMemberContext>(0);
		}
		public EnumerationContext enumeration() {
			return GetRuleContext<EnumerationContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public AssingmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assingment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterAssingment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitAssingment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssingment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssingmentContext assingment() {
		AssingmentContext _localctx = new AssingmentContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_assingment);
		try {
			State = 101;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78; Match(IDENTIFIER);
				State = 79; Match(T__6);
				State = 80; expression(0);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81; Match(IDENTIFIER);
				State = 82; Match(IDENTIFIER);
				State = 83; Match(T__6);
				State = 84; newClass();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 85; propMember();
				State = 86; Match(T__6);
				State = 87; expression(0);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 89; propMember();
				State = 90; Match(T__6);
				State = 91; enumeration();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 93; propMember();
				State = 94; Match(T__7);
				State = 95; functionCall();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 97; propMember();
				State = 98; Match(T__6);
				State = 99; newClass();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropMemberContext : ParserRuleContext {
		public ITerminalNode[] IDENTIFIER() { return GetTokens(GrammParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GrammParser.IDENTIFIER, i);
		}
		public PropMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propMember; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterPropMember(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitPropMember(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropMemberContext propMember() {
		PropMemberContext _localctx = new PropMemberContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_propMember);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(IDENTIFIER);
			State = 104; Match(T__7);
			State = 105; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_constructorContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(GrammParser.IDENTIFIER, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode TYPE() { return GetToken(GrammParser.TYPE, 0); }
		public Class_constructorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_constructor; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterClass_constructor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitClass_constructor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClass_constructor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Class_constructorContext class_constructor() {
		Class_constructorContext _localctx = new Class_constructorContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_class_constructor);
		int _la;
		try {
			State = 129;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; Match(IDENTIFIER);
				State = 108; Match(T__2);
				State = 117;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__11) | (1L << INTEGER) | (1L << DOUBLE) | (1L << STRING) | (1L << BOOL) | (1L << NULL) | (1L << IDENTIFIER))) != 0)) {
					{
					State = 109; expression(0);
					State = 114;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==T__8) {
						{
						{
						State = 110; Match(T__8);
						State = 111; expression(0);
						}
						}
						State = 116;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					}
				}

				State = 119; Match(T__3);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120; Match(IDENTIFIER);
				State = 121; Match(T__2);
				State = 126;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__9) {
					{
					State = 122; Match(T__9);
					State = 123; Match(T__2);
					State = 124; Match(TYPE);
					State = 125; Match(T__3);
					}
				}

				State = 128; Match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(GrammParser.TYPE, 0); }
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_typeDeclaration);
		try {
			State = 136;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case TYPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131; Match(TYPE);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 2);
				{
				State = 132; Match(T__9);
				State = 133; Match(T__2);
				State = 134; Match(TYPE);
				State = 135; Match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumerationContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public EnumerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumeration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterEnumeration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitEnumeration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumeration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumerationContext enumeration() {
		EnumerationContext _localctx = new EnumerationContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_enumeration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; expression(0);
			State = 146;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				State = 143;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__10) {
					{
					{
					State = 139; Match(T__10);
					State = 140; expression(0);
					}
					}
					State = 145;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(GrammParser.IDENTIFIER, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitFunctionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_functionCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148; Match(IDENTIFIER);
			State = 149; Match(T__2);
			State = 158;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__11) | (1L << INTEGER) | (1L << DOUBLE) | (1L << STRING) | (1L << BOOL) | (1L << NULL) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 150; expression(0);
				State = 155;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__8) {
					{
					{
					State = 151; Match(T__8);
					State = 152; expression(0);
					}
					}
					State = 157;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 160; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NewClassContext : ParserRuleContext {
		public ITerminalNode NEW() { return GetToken(GrammParser.NEW, 0); }
		public Class_constructorContext class_constructor() {
			return GetRuleContext<Class_constructorContext>(0);
		}
		public NewClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_newClass; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.EnterNewClass(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammListener typedListener = listener as IGrammListener;
			if (typedListener != null) typedListener.ExitNewClass(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammVisitor<TResult> typedVisitor = visitor as IGrammVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewClass(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NewClassContext newClass() {
		NewClassContext _localctx = new NewClassContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_newClass);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162; Match(NEW);
			State = 163; class_constructor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CompareExpressionContext : ExpressionContext {
		public ExpressionContext[] expression() {
